# azure-mcp-python

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  COPY_INSTRUCTIONS.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  foundryproblems.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: ISSUES.md  PROJECT_PLAN.md  RESEARCH_NOTES.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_tool.md
.github/workflows/: ci.yml  deploy.yml  release.yml
Refered_MCP_Server_OLD/: __init__.py  cosmos_client.py  main.py
docs/: ARCHITECTURE.md  README.md  adding-tools.md  ai-foundry-deployment.md  authentication.md  permissions.md  testing.md
scripts/: assign-cosmos-data-roles.sh  create-github-issues.sh
src/azure_mcp/: __init__.py  __main__.py  server.py
src/azure_mcp/core/: __init__.py  auth.py  base.py  cache.py  errors.py  models.py  registry.py
src/azure_mcp/tools/: __init__.py
src/azure_mcp/tools/appinsights/: __init__.py  dependencies.py  discovery.py  events.py  exceptions.py  query.py  requests.py  service.py  traces.py
src/azure_mcp/tools/bing/: __init__.py  discovery.py  entities.py  images.py  news.py  service.py  videos.py  web.py
src/azure_mcp/tools/communication/: __init__.py  email.py  phonenumber.py  resource.py  service.py  sms.py
src/azure_mcp/tools/cosmos/: __init__.py  account.py  container.py  database.py  item.py  service.py
src/azure_mcp/tools/cost/: __init__.py  budgets.py  exports.py  forecast.py  query.py  recommendations.py  service.py  usage.py
src/azure_mcp/tools/entraid/: __init__.py  app.py  group.py  security.py  service.py  user.py
src/azure_mcp/tools/monitor/: __init__.py  activity.py  alerts.py  autoscale.py  config.py  logs.py  metrics.py  service.py
src/azure_mcp/tools/rbac/: __init__.py  approles.py  assignments.py  roles.py  service.py
src/azure_mcp/tools/resourcegraph/: __init__.py  query.py
src/azure_mcp/tools/search/: __init__.py  discovery.py  document.py  index.py  query.py  service.py  suggest.py
src/azure_mcp/tools/storage/: __init__.py  account.py  blob.py  container.py  queue.py  service.py  table.py
tests/: conftest.py
tests/unit/: test_architecture_patterns.py  test_schema_compatibility.py
tests/unit/core/: test_auth.py  test_cache.py  test_errors.py  test_registry.py
tests/unit/tools/: test_appinsights.py  test_bing.py  test_communication.py  test_cosmos.py  test_cost.py  test_entraid.py  test_monitor.py  test_rbac.py  test_resourcegraph.py  test_search.py  test_storage.py
