[project]
name = "azure-mcp"
version = "0.1.0"
description = "Azure MCP Server - Model Context Protocol tools for Azure services"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Kiko de Angel", email = "frdeange@microsoft.com" }
]
keywords = ["azure", "mcp", "ai", "llm", "copilot", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # MCP Protocol
    "fastmcp>=2.14.0",
    
    # Azure Core
    "azure-identity==1.25.1",
    "azure-core==1.38.0",
    "azure-mgmt-resource==24.0.0",
    "azure-mgmt-resourcegraph>=8.0.1",
    
    # Framework
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    
    # Utilities
    "structlog==25.5.0",
    "cachetools==6.2.6",
]

[project.optional-dependencies]
# HTTP transport for cloud deployment
http = ["uvicorn==0.40.0", "starlette==0.52.1"]

# Azure service SDKs - install as needed
storage = [
    "azure-storage-blob==12.28.0",
    "azure-storage-queue==12.15.0",
    "azure-data-tables==12.7.0",
    "aiohttp==3.13.3",  # Required for async storage operations
]
cosmos = ["azure-cosmos==4.14.5", "azure-mgmt-cosmosdb==9.9.0"]
keyvault = [
    "azure-keyvault-secrets==4.10.0",
    "azure-keyvault-keys==4.11.0",
    "azure-keyvault-certificates==4.10.0",
]
sql = ["azure-mgmt-sql==4.0.0b24"]
monitor = ["azure-monitor-query==2.0.0", "azure-mgmt-monitor==7.0.0"]
cost = [
    "azure-mgmt-costmanagement==4.0.1",
    "azure-mgmt-consumption==10.0.0",
    "azure-mgmt-advisor==9.0.0",
    "six==1.17.0",  # Required by azure-mgmt-advisor
]
entra = ["msgraph-sdk==1.53.0"]
rbac = [
    "azure-mgmt-authorization==4.0.0",
    "msgraph-sdk==1.53.0",  # For Graph app role assignments
]
communication = [
    "azure-communication-sms==1.1.0",
    "azure-communication-email==1.1.0",
    "azure-communication-phonenumbers==1.4.0",
]

# All Azure services
all = [
    "azure-mcp[http,storage,cosmos,keyvault,sql,monitor,cost,entra,communication]",
]

# Development
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.14.14",
    "mypy==1.19.1",
    "pre-commit==4.5.1",
]

# Documentation
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.7.1",
    "mkdocstrings==1.0.2",
]

[project.scripts]
azure-mcp = "azure_mcp.server:main"
azure-mcp-http = "azure_mcp.server:main_http"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["azure_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.coverage.run]
source = ["src/azure_mcp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
